# python-fastapi-project

./: .env  pyproject.toml  test.db  test.py
src/: app.py  db.py  images.py  schemas.py
