[project]
name = "python-backend-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.139.0",
    "imagekitio>=5.7.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.0",
]
